--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -26,11 +26,11 @@ on:
       days:
         description: '清理[X]天之前的Actions空间操作记录(可改)'
         required: true
-        default: '7'
+        default: '2'
       rele:
         description: '保留[X]个Releases不被删除(可改)'
         required: true
-        default: '10'
+        default: '2'
 
 
 # 定时触发开启开始编译(把下面两个#去掉开启,时间设置请看定时开启编译说明)
@@ -63,7 +63,7 @@ jobs:
       matrix:
         target: [Lede_source]
 
-        # [Lede_source,Lienol_source,Mortal_source,Tianling_source,openwrt_amlogic]
+        # [Lede_source]
 
     
     steps:
